// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when has an error 1`] = `""`;

exports[`should render correctly when logged in 1`] = `
<Modal
  backdropTransition={[Function]}
  onHide={[Function]}
  show={true}
  transition={[Function]}
>
  <div
    className="nocontent src-modules-sidenav-index__modal"
    role="navigation"
  >
    <HeaderLogo
      onClick={[Function]}
      size="small"
    />
    <Menu
      id="Entities"
      idOfOpenMenu={null}
      items={
        Array [
          Object {
            "label": "Add Event",
            "match": /\\^\\\\/event\\$/i,
            "path": "/event",
            "value": "/event",
          },
          Object {
            "label": "Add Event Series",
            "match": /\\^\\\\/event-series\\$/i,
            "path": "/event-series",
            "value": "/event-series",
          },
          Object {
            "label": "Add Talent",
            "match": /\\^\\\\/talent\\$/i,
            "path": "/talent",
            "value": "/talent",
          },
          Object {
            "label": "Add Venue",
            "match": /\\^\\\\/venue\\$/i,
            "path": "/venue",
            "value": "/venue",
          },
        ]
      }
      key="Entities"
      label="Entities"
      onExpanderChange={[Function]}
      onLinkClick={[Function]}
    />
    <Menu
      id="Tags"
      idOfOpenMenu={null}
      items={
        Array [
          Object {
            "label": "Medium Tags",
            "match": /\\^\\\\/tags\\\\/medium\\$/i,
            "path": "/tags/medium",
            "value": "/tags/medium",
          },
          Object {
            "label": "Style Tags",
            "match": /\\^\\\\/tags\\\\/style\\$/i,
            "path": "/tags/style",
            "value": "/tags/style",
          },
          Object {
            "label": "Audience Tags",
            "match": /\\^\\\\/tags\\\\/audience\\$/i,
            "path": "/tags/audience",
            "value": "/tags/audience",
          },
          Object {
            "label": "Geo Tags",
            "match": /\\^\\\\/tags\\\\/geo\\$/i,
            "path": "/tags/geo",
            "value": "/tags/geo",
          },
        ]
      }
      key="Tags"
      label="Tags"
      onExpanderChange={[Function]}
      onLinkClick={[Function]}
    />
    <SidenavButton
      ariaHaspopup={false}
      label="Log Out"
      onClick={[Function]}
    />
  </div>
</Modal>
`;

exports[`should render correctly when logged out 1`] = `""`;

exports[`should render correctly when not showing 1`] = `
<Modal
  backdropTransition={[Function]}
  onHide={[Function]}
  show={false}
  transition={[Function]}
>
  <div
    className="nocontent src-modules-sidenav-index__modal"
    role="navigation"
  >
    <HeaderLogo
      onClick={[Function]}
      size="small"
    />
    <Menu
      id="Entities"
      idOfOpenMenu={null}
      items={
        Array [
          Object {
            "label": "Add Event",
            "match": /\\^\\\\/event\\$/i,
            "path": "/event",
            "value": "/event",
          },
          Object {
            "label": "Add Event Series",
            "match": /\\^\\\\/event-series\\$/i,
            "path": "/event-series",
            "value": "/event-series",
          },
          Object {
            "label": "Add Talent",
            "match": /\\^\\\\/talent\\$/i,
            "path": "/talent",
            "value": "/talent",
          },
          Object {
            "label": "Add Venue",
            "match": /\\^\\\\/venue\\$/i,
            "path": "/venue",
            "value": "/venue",
          },
        ]
      }
      key="Entities"
      label="Entities"
      onExpanderChange={[Function]}
      onLinkClick={[Function]}
    />
    <Menu
      id="Tags"
      idOfOpenMenu={null}
      items={
        Array [
          Object {
            "label": "Medium Tags",
            "match": /\\^\\\\/tags\\\\/medium\\$/i,
            "path": "/tags/medium",
            "value": "/tags/medium",
          },
          Object {
            "label": "Style Tags",
            "match": /\\^\\\\/tags\\\\/style\\$/i,
            "path": "/tags/style",
            "value": "/tags/style",
          },
          Object {
            "label": "Audience Tags",
            "match": /\\^\\\\/tags\\\\/audience\\$/i,
            "path": "/tags/audience",
            "value": "/tags/audience",
          },
          Object {
            "label": "Geo Tags",
            "match": /\\^\\\\/tags\\\\/geo\\$/i,
            "path": "/tags/geo",
            "value": "/tags/geo",
          },
        ]
      }
      key="Tags"
      label="Tags"
      onExpanderChange={[Function]}
      onLinkClick={[Function]}
    />
    <SidenavButton
      ariaHaspopup={false}
      label="Log Out"
      onClick={[Function]}
    />
  </div>
</Modal>
`;
